Makes matplotlib figs with dark text legible in the dark theme (and related fixes) (#5232)
* fixes #3886, #3922, and a bunch of others

* committed pretified css

--- a/packages/rendermime/style/index.css
+++ b/packages/rendermime/style/index.css
@@ -396,6 +396,19 @@
   margin-bottom: 1em;
 }
 
+/* Change color behind transparent images if they need it... */
+[data-theme-light='false'] .jp-RenderedImage img.jp-needs-light-background {
+  background-color: var(--jp-inverse-layout-color1);
+}
+[data-theme-light='true'] .jp-RenderedImage img.jp-needs-dark-background {
+  background-color: var(--jp-inverse-layout-color1);
+}
+/* ...or leave it untouched if they don't */
+[data-theme-light='false'] .jp-RenderedImage img.jp-needs-dark-background {
+}
+[data-theme-light='true'] .jp-RenderedImage img.jp-needs-light-background {
+}
+
 .jp-RenderedHTMLCommon img,
 .jp-RenderedImage img,
 .jp-RenderedHTMLCommon svg,
